--- a/trunk/generic/schemes/dump/SymbolTable.html
+++ b/trunk/generic/schemes/dump/SymbolTable.html
@@ -13,7 +13,7 @@
 </table>
 <table border="1">
 <tr><td colspan="4" align="center">NonTerminals</td></tr>
-<tr><td>Index</td><td>Name</td><td>Deletable</td><td>Graph</td></tr>
+<tr><td>Index</td><td>Name</td><td>Deletable</td><td>Graph</td><td>first</td><td>follow</td><td>nts</td></tr>
 <!---- nonterminals ---->
 <!---- enable ---->
 </table>
